fix(orchestrator-service): round-trip blockers — body cache, schema refs, Jackson Instant, null-tolerant outbox payload
- InternalHmacFilter: replace ContentCachingRequestWrapper (which consumes the
  stream so the controller sees an empty body) with a CachedBodyRequest
  wrapper that lets downstream re-read the buffered bytes.
- ContractValidator: register a JsonSchemaFactory schemaMapper that maps the
  contracts' "$id" prefix (https://fiap-secure-systems/contracts/) to the
  local contracts directory, so cross-schema $refs resolve locally instead of
  attempting a network fetch.
- CompositionConfig: drop the custom ObjectMapper @Bean and rely on Spring
  Boot's auto-configured one, which has JavaTimeModule registered (required
  for serializing java.time.Instant fields in REST responses).
- OutboxMessageEntity.create: switch from Map.copyOf (rejects null values) to
  unmodifiableMap(LinkedHashMap.of(payload)) so SessionStateChanged payloads
  with fromState=null (initial events) round-trip cleanly through JSONB.
- orchestrator-round-trip.sh: loop receives over the session-events queue;
  SQS may return fewer than max-messages per call, so a single receive can
  miss most of the 5 transition events.

End-to-end verified: 201 CREATED → REPORT_READY in ~2s, 5 session-events
delivered to session-events-gateway, smoke PASS=17.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>